installation guide and better formatting

--- a/index.html
+++ b/index.html
@@ -13,9 +13,23 @@
             <h1>Joob's Pack</h1>
             <p>This is a basic description of Joob's Pack. Learn more about the pack below.</p>
             <div class="buttons">
-                <button>Download</button>
-                <button>Install Guide</button>
+                <a href="#installation-guide"><button class="download">Download</button></a>
+                <a href="#installation-guide"><button>Install Guide</button></a>
                 <button>More Info</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="installation-guide" id="installation-guide">
+        <h2>Installation Guide</h2>
+        <div class="options">
+            <div class="option">
+                <h3>Curseforge Installation</h3>
+                <!-- Installation instructions go here -->
+            </div>
+            <div class="option">
+                <h3>Other Options</h3>
+                <!-- Other options go here -->
             </div>
         </div>
     </div>
