added alternative options and text.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <ul>
                     <li>
                         <h4>Step 1 - Downloading CurseForge</h4>
-                        <p>This assumes that you already have the CurseForge launcher installed. Which can be found <a href="https://www.curseforge.com/download/app">here</a>.</p>
-                        <p>You will probably want to download the Standalone version to avoid Overwolf bloat.</p>
+                        <p>If you don't already have the CurseForge launcher installed, you can download it <a href="https://www.curseforge.com/download/app">here</a>.</p>
+                        <p>You will probably want to download the <em>Standalone</em> version to avoid Overwolf bloat.</p>
                         <img src="cursestep1.png" alt="Instruction 1">
                     </li>
                     <li>
@@ -64,13 +64,28 @@
                 </ul>
             </div>
             <div class="option">
-                <h3>Other Options</h3>
+                <h3>Alternative Launchers</h3>
                 <ul>
-                    <li>First option</li>
-                    <li>Second option</li>
-                    <li>Third option</li>
-                    <li>Fourth option</li>
-                    <li>Fifth option</li>
+                    <p>Alternatives to CurseForge are not limited to these two examples, there are many others. Almost all alternatives have methods to import CurseForge packs.</p>
+                    <p>These launchers might automatically open a browser during the installation process. This is NORMAL, as some mods are required to be downloaded this way due to third party limitations.</p>
+                    <li>
+                        <h4>Prism Launcher</h4>
+                        <p>Prism Launcher can be downloaded <a href="https://prismlauncher.org/">here</a>. It is an adfree alternative to Curseforge, although basic looking it has more functionality than CurseForge. It is safe.</p>
+                        <img src="prismlauncher.webp" alt="Prism Launcher Exampe">
+                    </li>
+                    <li>
+                        <h4>AT Launcher</h4>
+                        <p>AT Launcher can be downloaded <a href="https://prismlauncher.org/">here</a>. Another alternative to CurseForge and is very similar to Prism Launcher. Slightly harder to navigate than Prism or Curse.</p>
+                        <img src="atlauncher.png" alt="AT Launcher example">
+                    </li>
+                    <li>
+                        <h4>Other Options</h4>
+                        
+                        <img src="gdlauncher_logo.svg" alt="AT Launcher example" style="width: 32px;"> <p>GD Launcher is another good and safe alternative and can be found <a href="https://gdlauncher.com/en/">here</a></p>
+                        <br>
+
+                        <img src="infinity32.png" alt="MultiMC" style="width: 32px;"><p>MultiMC is a lesser known but good alternative as well. I cannot personally vouch for this launcher though. Found <a href="https://multimc.org/">here</a></p>
+                    </li>
                 </ul>
             </div>
         </div>
