fixed weird pack details text

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <h3>Alternative Launchers</h3>
                 <ul>
                     <p>Alternatives to CurseForge are not limited to these two examples, there are many others. Almost all alternatives have methods to import CurseForge packs.</p>
+                    <p>Importing the modpack should be a similar process to Curseforge with buttons in different places. <strong>Don't forget to adjust memory.</strong></p>
                     <p>These launchers might automatically open a browser during the installation process. This is NORMAL, as some mods are required to be downloaded this way due to third party limitations.</p>
                     <li>
                         <h4>Prism Launcher</h4>
@@ -92,13 +93,12 @@
     </section>
     
     <section class="more-info" id="more-info">
+        <h2>Pack Details</h2>
         <div class="more-info-content">
             <div>
                 <img src="info-background.png" alt="Background Image">
             </div>
             <div>
-                <h2>Pack Details</h2>
-                <br>
 
                 <h3>Loads of Quests</h3>
                 <p>Keep on track and learn new mods with quests designed for both beginners and experienced players.</p>
