added some letter spacing and changed info text

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <p>From magic with Botania and Mystical Agriculture to technology with Create and Modern Industrialization, there's something to keep everyone interested.</p>
 
                 <h3>Explore the Universe</h3>
-                <p>Travel to space in rockets or explore new dimensions. The choice is yours.</p>
+                <p>Travel to other planets in rockets to settle on or explore. Build space stations and create your empire in the stars. The choice is yours.</p>
 
                 <h3>Discover New Dimensions</h3>
                 <p>Explore the Deep Dark and open the portal to a new world.</p>
