--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                 
                 <h3>Embrace Different Classes</h3>
                 <p>Choose your path. Be a wizard, paladin, priest, assassin, warrior, and more with unique spells and abilities.</p>
+
+                <h3>Pokémon!</h3>
+                <p>Catch, train, evolve and fight Pokémon!</p>
                 
                 <h3>Advanced Mods</h3>
                 <p>From magic with Botania and Mystical Agriculture to technology with Create and Modern Industrialization, there's something to keep everyone interested.</p>
