gallery with rotating images in info section

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <section class="more-info" id="more-info">
         <h2>Pack Details</h2>
         <div class="more-info-content">
-            <div class="img-container">
-                <img src="info-background.png" alt="Background Image">
+            <div id="image-gallery" class="image-pane">
+                <img id="gallery-image" src="info-background.png" alt="Gallery image" />
             </div>
             <div>
 
