fixed gallery + controls

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
         <div class="more-info-content">
             <div id="image-gallery" class="image-pane">
                 <img id="gallery-image" src="info-background.png" alt="Gallery image" />
+                <button id="prev" class="carousel-control">&lt;</button>
+                <button id="next" class="carousel-control">&gt;</button>
             </div>
             <div>
 
