--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="buttons">
                 <a href="#"><button class="download" title="3421 MegaBytes" onclick="smoothScroll('installation-guide')">Download</button></a>
                 <button onclick="smoothScroll('installation-guide')">Install Guide</button>
-                <button onclick="smoothScroll('more-info')">More Info</button>
+                <button onclick="smoothScroll('more-info')">Pack Info</button>
             </div>
         </div>
     </section>
