spelling error and some wording

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>Installation Guide</h2>
         <div class="options">
             <div class="option">
-                <h3>Curseforge Installation</h3>
+                <h3>CurseForge Installation</h3>
                 <ul>
                     <li>
                         <h4>Step 1 - Downloading CurseForge</h4>
@@ -34,24 +34,25 @@
                     </li>
                     <li>
                         <h4>Step 2 - Downloading The Pack</h4>
-                        <p>Download the modpack either <a href="https://www.curseforge.com/download/app">here</a> or via the download button above.</p>
+                        <p>Download the modpack either <a href="https://www.curseforge.com/download/app">here</a> or via the download button above. You don't have to unzip it.</p>
                         <!-- <img src="instruction2.png" alt="Instruction 2"> -->
                     </li>
                     <li>
                         <h4>Step 3 - Creating Profile</h4>
-                        <p>Navigate to the minecraft tab of cursefoge and select <em>Create Custom Profile</em>.</p>
+                        <p>Navigate to the minecraft tab of CurseForge and select <em>Create Custom Profile</em>.</p>
                         <img src="cursestep3.png" alt="Instruction 3">
                     </li>
                     <li>
                         <h4>Step 4 - Importing</h4>
-                        <p>Select <span style="text-decoration: underline;">import</span> and find the .zip you downloaded.</p>
+                        <p>Select <span style="text-decoration: underline;">import</span> and find the .zip you downloaded. You don't have to unzip it.</p>
                         <img src="cursestep4.png" alt="Instruction 4">
                     </li>
                     <li>
                         <h4>Step 5 - Increasing Minecraft's Memory</h4>
-                        <p>Navigate to Profile Options and modify the amount of memory your game will be using.</p>
+                        <p>Navigate to Profile Options and modify the amount of memory your game will be using. You can also modify this in CurseForge settings in the minecraft tab to make this a global setting.</p>
                         <img src="cursestep5a.png" alt="Instruction 5a">
                         <p>Adjust the memory according to the memory available on your system.</p>
+                        <img src="cursestep5b.png" alt="Instruction 5b">
                         <ul id="memory-settings">
                             <li><strong><div>System</div> Game</strong></li>
                             <li><div>8 GB</div> 5,500MB</li>
@@ -59,7 +60,6 @@
                             <li><div>32 GB</div> 12,000MB</li>
                         </ul>
                         <p>These are just recommended. Don't go below 5,500MB or above 12,000MB</p>
-                        <img src="cursestep5b.png" alt="Instruction 5b">
                     </li>
                 </ul>
             </div>
