--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joob's Pack</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="description" content="Author: Jacob Vilevac
+    Description: Website for minecraft modpack called Joob's Pack">
 </head>
 <body>
     <section class="hero">
@@ -28,13 +30,13 @@
                 <ul>
                     <li>
                         <h4>Step 1 - Downloading CurseForge</h4>
-                        <p>If you don't already have the CurseForge launcher installed, you can download it <a href="https://www.curseforge.com/download/app">here</a>.</p>
+                        <p>If you don't already have the CurseForge launcher installed, you can download it on the <a href="https://www.curseforge.com/download/app">CurseForge Launcher</a> page.</p>
                         <p>You will probably want to download the <em>Standalone</em> version to avoid Overwolf bloat.</p>
                         <img src="cursestep1.png" alt="Instruction 1">
                     </li>
                     <li>
                         <h4>Step 2 - Downloading The Pack</h4>
-                        <p>Download the modpack either <a href="https://www.curseforge.com/download/app">here</a> or via the download button above. You don't have to unzip it.</p>
+                        <p>Download the <a href="https://www.curseforge.com/download/app">Modpack</a> here or via the download button above. You don't have to unzip it.</p>
                         <!-- <img src="instruction2.png" alt="Instruction 2"> -->
                     </li>
                     <li>
@@ -71,21 +73,21 @@
                     <p>These launchers might automatically open a browser during the installation process. This is NORMAL, as some mods are required to be downloaded this way due to third party limitations.</p>
                     <li>
                         <h4>Prism Launcher</h4>
-                        <p>Prism Launcher can be downloaded <a href="https://prismlauncher.org/">here</a>. It is an adfree alternative to Curseforge, although basic looking it has more functionality than CurseForge. It is safe.</p>
+                        <p><a href="https://prismlauncher.org/">Prism Launcher can be downloaded here</a>. It is an adfree alternative to CurseForge, although basic looking it has more functionality than CurseForge. It is safe.</p>
                         <img src="prismlauncher.webp" alt="Prism Launcher Exampe">
                     </li>
                     <li>
                         <h4>AT Launcher</h4>
-                        <p>AT Launcher can be downloaded <a href="https://prismlauncher.org/">here</a>. Another alternative to CurseForge and is very similar to Prism Launcher. Slightly harder to navigate than Prism or Curse.</p>
+                        <p><a href="https://atlauncher.com/downloads">AT Launcher can be downloaded here</a>. Another alternative to CurseForge and is very similar to Prism Launcher. Slightly harder to navigate than Prism or Curse.</p>
                         <img src="atlauncher.png" alt="AT Launcher example">
                     </li>
                     <li>
                         <h4>Other Options</h4>
                         
-                        <img src="gdlauncher_logo.svg" alt="AT Launcher example" style="width: 32px;"> <p>GD Launcher is another good and safe alternative and can be found <a href="https://gdlauncher.com/en/">here</a></p>
+                        <img src="gdlauncher_logo.svg" alt="AT Launcher example" style="width: 32px;"> <p><a href="https://gdlauncher.com/en/">GD Launcher</a> is another good and safe alternative</p>
                         <br>
 
-                        <img src="infinity32.png" alt="MultiMC" style="width: 32px;"><p>MultiMC is a lesser known but good alternative as well. I cannot personally vouch for this launcher though. Found <a href="https://multimc.org/">here</a></p>
+                        <img src="infinity32.png" alt="MultiMC" style="width: 32px;"><p><a href="https://multimc.org/">MultiMC Launcher</a> is a lesser known but good alternative as well. I cannot personally vouch for this launcher though.</p>
                     </li>
                 </ul>
             </div>
