--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </li>
                     <li>
                         <h4>Step 2 - Downloading The Pack</h4>
-                        <p>Download the <a href="https://www.curseforge.com/download/app">Modpack</a> here or via the download button above. You don't have to unzip it.</p>
+                        <p>Download the <a href="https://www.curseforge.com/download/app">Modpack here</a> or via the download button above. You don't have to unzip it.</p>
                         <!-- <img src="instruction2.png" alt="Instruction 2"> -->
                     </li>
                     <li>
