better links and icons for alternative packs

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                     <li>
                         <h4>Other Options</h4>
                         
-                        <img src="gdlauncher_logo.svg" alt="AT Launcher example" style="width: 32px;"> <p><a href="https://gdlauncher.com/en/">GD Launcher</a> is another good and safe alternative</p>
+                        <p><a href="https://gdlauncher.com/en/"><img src="gdlauncher_logo.svg" alt="AT Launcher example" style="width: 32px; margin-bottom: -10px">GD Launcher</a> is another good and safe alternative</p>
                         <br>
 
-                        <img src="infinity32.png" alt="MultiMC" style="width: 32px;"><p><a href="https://multimc.org/">MultiMC Launcher</a> is a lesser known but good alternative as well. I cannot personally vouch for this launcher though.</p>
+                        <p><a href="https://multimc.org/"><img src="infinity32.png" alt="MultiMC" style="width: 32px; margin-bottom: -10px">MultiMC Launcher</a> is a lesser known but good alternative as well. I cannot personally vouch for this launcher though.</p>
                     </li>
                 </ul>
             </div>
