--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Joob's Pack</h1>
             <p>Modpack created by Jacob for the homies. Download and learn more about the pack below.</p>
             <div class="buttons">
-                <a href="#"><button class="download" title="3421 MegaBytes" onclick="smoothScroll('installation-guide')">Download</button></a>
+                <a href="#"><button class="download" onclick="smoothScroll('installation-guide')">Download</button></a>
                 <button onclick="smoothScroll('installation-guide')">Install Guide</button>
                 <button onclick="smoothScroll('more-info')">Pack Info</button>
             </div>
@@ -131,7 +131,7 @@
     <section id="safety-note" class="section">
         <h2>Note About Safety</h2>
         <div class="section-content">
-            <p>About a month ago an individual gained access to multiple Curse Forge Mod accounts and uploaded malicious version of those mods to be available to the public.</p>
+            <p>A couple months ago an individual gained access to multiple Curse Forge Mod accounts and uploaded malicious version of those mods to be available to the public.</p>
             <p>This was very quickly discovered and taken down. Mod developers and communities quickly released fixes and tools to detect the malicious code which locked down the problem.</p>
             <p>This was scary but was fixed quickly. I have done my due diligence when creating this pack. All mods have updated and checked to confirm no such malicious code.</p>
             <p>The modpack will rarely be updated, and all mod updates will be double checked to confirm validity.</p>
