made links go to new page

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 <ul>
                     <li>
                         <h4>Step 1 - Downloading CurseForge</h4>
-                        <p>If you don't already have the CurseForge launcher installed, you can download it on the <a href="https://www.curseforge.com/download/app">CurseForge Launcher</a> page.</p>
+                        <p>If you don't already have the CurseForge launcher installed, you can download it on the <a href="https://www.curseforge.com/download/app" target="_blank">CurseForge Launcher</a> page.</p>
                         <p>You will probably want to download the <em>Standalone</em> version to avoid Overwolf bloat.</p>
                         <img src="cursestep1.png" alt="Instruction 1">
                     </li>
                     <li>
                         <h4>Step 2 - Downloading The Pack</h4>
-                        <p>Download the <a href="https://www.curseforge.com/download/app">Modpack here</a> or via the download button above. You don't have to unzip it.</p>
+                        <p>Download the <a href="https://www.curseforge.com/download/app">Lite Modpack here</a> or via the download button above. You don't have to unzip it.</p>
                         <!-- <img src="instruction2.png" alt="Instruction 2"> -->
                     </li>
                     <li>
@@ -95,21 +95,21 @@
                     <p>These launchers might automatically open a browser during the installation process. This is NORMAL, as some mods are required to be downloaded this way due to third party limitations.</p>
                     <li>
                         <h4>Prism Launcher</h4>
-                        <p><a href="https://prismlauncher.org/">Prism Launcher can be downloaded here</a>. It is an adfree alternative to CurseForge, although basic looking it has more functionality than CurseForge. It is safe.</p>
+                        <p><a href="https://prismlauncher.org/" target="_blank">Prism Launcher can be downloaded here</a>. It is an adfree alternative to CurseForge, although basic looking it has more functionality than CurseForge. It is safe.</p>
                         <img src="prismlauncher.webp" alt="Prism Launcher Exampe">
                     </li>
                     <li>
                         <h4>AT Launcher</h4>
-                        <p><a href="https://atlauncher.com/downloads">AT Launcher can be downloaded here</a>. Another alternative to CurseForge and is very similar to Prism Launcher. Slightly harder to navigate than Prism or Curse.</p>
+                        <p><a href="https://atlauncher.com/downloads" target="_blank">AT Launcher can be downloaded here</a>. Another alternative to CurseForge and is very similar to Prism Launcher. Slightly harder to navigate than Prism or Curse.</p>
                         <img src="atlauncher.png" alt="AT Launcher example">
                     </li>
                     <li>
                         <h4>Other Options</h4>
                         
-                        <p><a href="https://gdlauncher.com/en/"><img src="gdlauncher_logo.svg" alt="AT Launcher example" style="width: 32px; margin-bottom: -10px">GD Launcher</a> is another good and safe alternative</p>
+                        <p><a href="https://gdlauncher.com/en/" target="_blank"><img src="gdlauncher_logo.svg" alt="AT Launcher example" style="width: 32px; margin-bottom: -10px">GD Launcher</a> is another good and safe alternative</p>
                         <br>
 
-                        <p><a href="https://multimc.org/"><img src="infinity32.png" alt="MultiMC" style="width: 32px; margin-bottom: -10px">MultiMC Launcher</a> is a lesser known but good alternative as well. I cannot personally vouch for this launcher though.</p>
+                        <p><a href="https://multimc.org/" target="_blank"><img src="infinity32.png" alt="MultiMC" style="width: 32px; margin-bottom: -10px">MultiMC Launcher</a> is a lesser known but good alternative as well. I cannot personally vouch for this launcher though.</p>
                     </li>
                 </ul>
             </div>
@@ -153,7 +153,7 @@
     <section id="safety-note" class="section">
         <h2>Note About Safety</h2>
         <div class="section-content">
-            <p>A couple months ago an individual gained access to multiple Curse Forge Mod accounts and uploaded malicious version of those mods to be available to the public.</p>
+            <p>A couple months ago an individual gained access to multiple Curse Forge Mod accounts and uploaded malicious code version of those mods to be available to the public. It was referred to as fractureiser.</p>
             <p>This was very quickly discovered and taken down. Mod developers and communities quickly released fixes and tools to detect the malicious code which locked down the problem.</p>
             <p>This was scary but was fixed quickly. I have done my due diligence when creating this pack. All mods have updated and checked to confirm no such malicious code.</p>
             <p>The modpack will rarely be updated, and all mod updates will be double checked to confirm validity.</p>
