--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="download-option lite">
                 <h3>Lite</h3>
-                <a href="./Instances/JoobsPack-Lite-1.0.zip" download><button class="download-button" id="lite-download">Download</button></a>
+                <a href="./Instances/JoobsPack-Lite.zip" download><button class="download-button" id="lite-download">Download</button></a>
                 <p>A lightweight version of the mod, with some mods not required for the client stripped away.</p>
                 <p class="highlighted">Recommended for playing on servers!</p>
             </div>
