--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 <h3>Pokémon!</h3>
                 <p>Catch, train, evolve and fight Pokémon!</p>
                 
-                <h3>Advanced Mods</h3>
-                <p>From magic with Botania and Mystical Agriculture to technology with Create and Modern Industrialization, there's something to keep everyone interested.</p>
+                <h3>Magic & Tech Progression</h3>
+                <p>From magic with Botania, Mystical Agriculture, and Spectrum to technology with Create and Modern Industrialization, there's something to keep everyone interested.</p>
 
                 <h3>Explore the Universe</h3>
                 <p>Travel to other planets in rockets to settle on or explore. Build space stations and create your empire in the stars. The choice is yours.</p>
