fix download button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Joob's Pack</h1>
             <p>Modpack created by Jacob for the homies. Download and learn more about the pack below.</p>
             <div class="buttons">
-                <a href="#"><button class="download" onclick="smoothScroll('downloads')">Download</button></a>
+                <button class="download" onclick="smoothScroll('downloads')">Download</button>
                 <button onclick="smoothScroll('installation-guide')">Install Guide</button>
                 <button onclick="smoothScroll('more-info')">Pack Info</button>
             </div>
