updated pack and alt launcher options

--- a/index.html
+++ b/index.html
@@ -90,9 +90,30 @@
             <div class="option">
                 <h3>Alternative Launchers</h3>
                 <ul>
+                    <p style="color: red">Note! This does not fully work. The pack will be incomplete!</p>
                     <p>Alternatives to CurseForge are not limited to these two examples, there are many others. Almost all alternatives have methods to import CurseForge packs.</p>
                     <p>Importing the modpack should be a similar process to Curseforge with buttons in different places. <strong>Don't forget to adjust memory.</strong></p>
                     <p>These launchers might automatically open a browser during the installation process. This is NORMAL, as some mods are required to be downloaded this way due to third party limitations.</p>
+                    <li>
+                        <h4>Step 1 - Download Alternative Version of the Pack</h4>
+                        <p><a href="https://prismlauncher.org/" target="_blank">Alternative pack download here</a>. The alternative version of the pack doesn't include a couple mods that can't be downloaded with third party apps.</p>
+                    </li>
+                    <li>
+                        <h4>Step 2 - Import Pack Into Launcher of Choice</h4>
+                        <p>Every pack has a different method of doing this, import the zip you downloaded before and everything should be downloaded automatically.</p>
+                    </li>
+                    <li>
+                        <h4>Step 3 - Unzip Downloaded Pack and Copy Contents</h4>
+                        <p>Config, DefaultConfig and Options.txt need to be copied into the base folder of the newly created modpack. The launcher should have a way to 'view instance/folder' which is where you need to copy the files into.</p>
+                    </li>
+                    <li>
+                        <h4>Step 4 - Download the Following Mods and Copy Into Mod Folder</h4>
+                        <p>Download the mods linked below. The links should lead directly to the required version.</p>
+                        <p><a href="">Sodium</a></p>
+                        <p><a href="">Iris Shaders</a></p>
+                        <p><a href="">Snow Under Trees</a></p>
+                    </li>
+                    
                     <li>
                         <h4>Prism Launcher</h4>
                         <p><a href="https://prismlauncher.org/" target="_blank">Prism Launcher can be downloaded here</a>. It is an adfree alternative to CurseForge, although basic looking it has more functionality than CurseForge. It is safe.</p>
@@ -125,7 +146,6 @@
                 <button id="next" class="carousel-control">&gt;</button>
             </div>
             <div>
-
                 <h3>Loads of Quests</h3>
                 <p>Keep on track and learn new mods with quests designed for both beginners and experienced players.</p>
                 
