--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="download-pane">
             <div class="download-option" style="pointer-events: none; opacity: 0.5;">
                 <h3>Full</h3>
-                <button class="download-button" id="full-download">Download</button>
+                <a><button class="download-button" id="full-download">Download</button></a>
                 <p>The full version of the mod, including all features and content. Suitable for single player and lan worlds.</p>
             </div>
             <div class="download-option lite">
@@ -38,7 +38,7 @@
             </div>
             <div class="download-option" style="pointer-events: none; opacity: 0.5;">
                 <h3>Server</h3>
-                <button class="download-button" id="server-download">Download</button>
+                <a><button class="download-button" id="server-download">Download</button></a>
                 <p>A compiled server pack for running dedicated servers. This is currently not finished so don't expect any stability.</p>
             </div>
         </div>
