switch install guide to a tabbed menu

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
     <section class="installation-guide" id="installation-guide">
         <h2>Installation Guide</h2>
         <div class="options">
-            <div class="option">
+            <div class="button-container">
+                <button id="curseforge-button" class="toggle-button active">CurseForge Installation</button>
+                <button id="alternative-button" class="toggle-button">Alternative Launchers</button>
+            </div>
+
+            <div class="option curseforge-option">
                 <h3>CurseForge Installation</h3>
                 <ul>
                     <li>
@@ -87,7 +92,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="option">
+            <div class="option alternative-option" style="display: none;">
                 <h3>Alternative Launchers</h3>
                 <ul>
                     <p style="color: red">Note! This does not fully work. The pack will be incomplete!</p>
