--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
     <section id="downloads">
         <h2>Downloads</h2>
         <div class="download-pane">
-            <div class="download-option" style="pointer-events: none; opacity: 0.5;">
+            <div class="download-option">
                 <h3>Full</h3>
-                <a><button class="download-button" id="full-download">Download</button></a>
+                <a href="./Instances/JoobsPack-Normal.zip"><button class="download-button" id="full-download">Download</button></a>
                 <p>The full version of the mod, including all features and content. Suitable for single player and lan worlds.</p>
             </div>
             <div class="download-option lite">
                 <h3>Lite</h3>
                 <a href="./Instances/JoobsPack-Lite.zip" download><button class="download-button" id="lite-download">Download</button></a>
+                <a href="">Alternate Launchers Download</a>
                 <p>A lightweight version of the mod, with some mods not required for the client stripped away.</p>
                 <p class="highlighted">Recommended for playing on servers!</p>
             </div>
@@ -101,22 +102,21 @@
                     <p>These launchers might automatically open a browser during the installation process. This is NORMAL, as some mods are required to be downloaded this way due to third party limitations.</p>
                     <li>
                         <h4>Step 1 - Download Alternative Version of the Pack</h4>
-                        <p><a href="https://prismlauncher.org/" target="_blank">Alternative pack download here</a>. The alternative version of the pack doesn't include a couple mods that can't be downloaded with third party apps.</p>
+                        <p><a href="" target="_blank">Alternative pack download here</a> or in Download section as Alternative Launcher Download. The alternative version of the pack doesn't include a couple mods that can't be downloaded with third party apps.</p>
                     </li>
                     <li>
                         <h4>Step 2 - Import Pack Into Launcher of Choice</h4>
                         <p>Every pack has a different method of doing this, import the zip you downloaded before and everything should be downloaded automatically.</p>
+                        <p>All alternate launchers will have some form of external download for mods that aren't available to third party platforms. This is normal, it might appear as a popup window with a confirmation.</p>
                     </li>
                     <li>
-                        <h4>Step 3 - Unzip Downloaded Pack and Copy Contents</h4>
-                        <p>Config, DefaultConfig and Options.txt need to be copied into the base folder of the newly created modpack. The launcher should have a way to 'view instance/folder' which is where you need to copy the files into.</p>
+                        <h4>Step 3 - Unzip Downloaded Pack and Copy Overrides</h4>
+                        <p>Copy everything in the /Overrides folder into the newly created instance on your launcher. The launcher should have a way to 'view instance/folder' which is where you need to copy the files into.</p>
                     </li>
                     <li>
                         <h4>Step 4 - Download the Following Mods and Copy Into Mod Folder</h4>
-                        <p>Download the mods linked below. The links should lead directly to the required version.</p>
-                        <p><a href="">Sodium</a></p>
-                        <p><a href="">Iris Shaders</a></p>
-                        <p><a href="">Snow Under Trees</a></p>
+                        <p>Download the mods linked below and place them in the instance's mod folder. The links should lead directly to the required version.</p>
+                        <p><a href="https://modrinth.com/mod/sodium/version/mc1.19.2-0.4.4?hl=en-US">Sodium</a></p>
                     </li>
                     
                     <li>
