alt download url

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="download-option lite">
                 <h3>Lite</h3>
                 <a href="./Instances/JoobsPack-Lite.zip" download><button class="download-button" id="lite-download">Download</button></a>
-                <a href="">Alternate Launchers Download</a>
+                <a href="./Instances/JoobsPack-LiteAlt.zip" download>Alternate Launchers Download</a>
                 <p>A lightweight version of the mod, with some mods not required for the client stripped away.</p>
                 <p class="highlighted">Recommended for playing on servers!</p>
             </div>
@@ -102,7 +102,7 @@
                     <p>These launchers might automatically open a browser during the installation process. This is NORMAL, as some mods are required to be downloaded this way due to third party limitations.</p>
                     <li>
                         <h4>Step 1 - Download Alternative Version of the Pack</h4>
-                        <p><a href="" target="_blank">Alternative pack download here</a> or in Download section as Alternative Launcher Download. The alternative version of the pack doesn't include a couple mods that can't be downloaded with third party apps.</p>
+                        <p><a href="./Instances/JoobsPack-LiteAlt.zip" download>Alternative pack download here</a> or in Download section as Alternative Launcher Download. The alternative version of the pack doesn't include a couple mods that can't be downloaded with third party apps.</p>
                     </li>
                     <li>
                         <h4>Step 2 - Import Pack Into Launcher of Choice</h4>
