Updated modpack and download link

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <section id="downloads">
         <h2>Downloads</h2>
         <div class="download-pane">
-            <div class="download-option">
+            <div class="download-option" style="pointer-events: none; opacity: 0.5;">
                 <h3>Full</h3>
                 <a href="./Instances/JoobsPack-Normal.zip"><button class="download-button" id="full-download">Download</button></a>
                 <p>The full version of the mod, including all features and content. Suitable for single player and lan worlds.</p>
             </div>
             <div class="download-option lite">
                 <h3>Lite</h3>
-                <a href="./Instances/JoobsPack-Lite.zip" download><button class="download-button" id="lite-download">Download</button></a>
+                <a href="https://www.curseforge.com/minecraft/modpacks/joobs-modpack/install/4695814" download><button class="download-button" id="lite-download">Download</button></a>
                 <a href="./Instances/JoobsPack-LiteAlt.zip" download>Alternate Launchers Download</a>
                 <p>A lightweight version of the mod, with some mods not required for the client stripped away.</p>
                 <p class="highlighted">Recommended for playing on servers!</p>
