Updated pictures and install text

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="options">
             <div class="button-container">
                 <button id="curseforge-button" class="toggle-button active">CurseForge Installation</button>
+                <button id="curseforgeManual-button" class="toggle-button">Manual Installation</button>
                 <button id="alternative-button" class="toggle-button">Alternative Launchers</button>
             </div>
 
@@ -63,7 +64,37 @@
                     </li>
                     <li>
                         <h4>Step 2 - Downloading The Pack</h4>
-                        <p>Download the <a href="https://www.curseforge.com/download/app">Lite Modpack here</a> or via the download button above. You don't have to unzip it.</p>
+                        <p>This should automatically redirect you to CurseForge's download page where it will ask you to open it via CurseForge's launcher. Do that, and it should be automatically added to your launcher.</p>
+                        <p>OR Download the <a href="https://www.curseforge.com/download/app">Lite Modpack here</a> or via the download button above. You don't have to unzip it.</p>
+                        <!-- <img src="instruction2.png" alt="Instruction 2"> -->
+                    </li>
+                    <li>
+                        <h4>Step 3 - Increasing Minecraft's Memory</h4>
+                        <p>Navigate to CurseForge's Minecraft options and modify the amount of memory your game will be using. You can also modify this per profile in the profile's options.</p>
+                        <img src="cursestep5a.png" alt="Instruction 5a">
+                        <p>Adjust the memory according to the memory available on your system.</p>
+                        <img src="cursestep5b.png" alt="Instruction 5b">
+                        <ul id="memory-settings">
+                            <li><strong><div>System</div> Game</strong></li>
+                            <li><div>8 GB</div> 5,500MB</li>
+                            <li><div>16 GB</div> 8,000MB</li>
+                            <li><div>32 GB</div> 12,000MB</li>
+                        </ul>
+                        <p>These are just recommended. Don't go below 5,500MB or above 12,000MB</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="option curseforgeManual-option" style="display: none;">
+                <ul>
+                    <li>
+                        <h4>Step 1 - Downloading CurseForge</h4>
+                        <p>If you don't already have the CurseForge launcher installed, you can download it on the <a href="https://www.curseforge.com/download/app" target="_blank">CurseForge Launcher</a> page.</p>
+                        <p>You will probably want to download the <em>Standalone</em> version to avoid Overwolf bloat.</p>
+                        <img src="cursestep1.png" alt="Instruction 1">
+                    </li>
+                    <li>
+                        <h4>Step 2 - Downloading The Pack</h4>
+                        <p>Download the <a href="./Instances/JoobsPack-Lite.zip">Lite Modpack here</a> or via the download button above. You don't have to unzip it.</p>
                         <!-- <img src="instruction2.png" alt="Instruction 2"> -->
                     </li>
                     <li>
@@ -77,8 +108,8 @@
                         <img src="cursestep4.png" alt="Instruction 4">
                     </li>
                     <li>
-                        <h4>Step 5 - Increasing Minecraft's Memory</h4>
-                        <p>Navigate to Profile Options and modify the amount of memory your game will be using. You can also modify this in CurseForge settings in the minecraft tab to make this a global setting.</p>
+                        <h4>Step 3 - Increasing Minecraft's Memory</h4>
+                        <p>Navigate to CurseForge's Minecraft options and modify the amount of memory your game will be using. You can also modify this per profile in the profile's options.</p>
                         <img src="cursestep5a.png" alt="Instruction 5a">
                         <p>Adjust the memory according to the memory available on your system.</p>
                         <img src="cursestep5b.png" alt="Instruction 5b">
